--- a/main-apps/vitest-react-ts-swc-base/src/assets/styles/components/general.scss
+++ b/main-apps/vitest-react-ts-swc-base/src/assets/styles/components/general.scss
@@ -15,7 +15,7 @@
 		height: 30px;
 		// margin: 0 0 0 -3px;
 		margin-right: 8px;
-		padding: 0;
+		padding: 10px;
 	}
 	.title {
 		display: inline-block;
