--- a/sub-apps/side-nav/src/assets/styles/components/app.scss
+++ b/sub-apps/side-nav/src/assets/styles/components/app.scss
@@ -1,3 +1,7 @@
+// import dark theme
+// @use 'element-plus/theme-chalk/src/dark/css-vars.scss' as *;
+@use '@/assets/styles/theme/element.scss' as *;
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
@@ -5,6 +9,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	scroll-behavior: smooth; // 滚动条平滑移动
+	font-size: 14px;
 }
 
 code {
