--- a/sub-apps/vite-react-ts-jest-app/src/assets/styles/main/function.scss
+++ b/sub-apps/vite-react-ts-jest-app/src/assets/styles/main/function.scss
@@ -1,9 +1,8 @@
 @charset "UTF-8";
 
 /**--- $声明全局变量  ---**/
-$font-stack: -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', 'Segoe UI', Roboto, Helvetica,
-	'Helvetica Neue', Arial, 'Noto Sans', sans-serif, Oxygen, 'Apple Color Emoji', 'Segoe UI Emoji',
-	'Segoe UI Symbol', 'Noto Color Emoji', Ubuntu, 'Cantarell', 'SimSun';
+$font-stack: -apple-system, BlinkMacSystemFont, 'Microsoft YaHei', 'Segoe UI', Roboto, Helvetica, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+	Oxygen, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji', Ubuntu, 'Cantarell', 'SimSun';
 $font-mono: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
 $primary-color: #9e9e9e;
 $color-light: #e3edf5;
@@ -19,12 +18,7 @@ $color-yellow-dark: #ffe608;
 // Visual Screen colors
 $vs-primary-color: #58dff8;
 $bar-bg-color: rgb(5, 18, 58);
-$bling-line-bg: linear-gradient(
-	to right,
-	rgba(0, 0, 0, 0),
-	rgba(226, 253, 255, 1),
-	rgba(0, 0, 0, 0)
-);
+$bling-line-bg: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(226, 253, 255, 1), rgba(0, 0, 0, 0));
 
 $margin-width: 1.5rem;
 $block-margin: 1rem;
