--- a/sub-apps/vitest-vue3-ts-el-app/src/assets/styles/main/base.scss
+++ b/sub-apps/vitest-vue3-ts-el-app/src/assets/styles/main/base.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
-@import './normalize.scss';
-@import './function.scss';
+// @import './normalize.scss';
+// @import './function.scss';
 
 /*公共部分*/
 * {
