--- a/sub-apps/side-nav/src/assets/styles/components/app.scss
+++ b/sub-apps/side-nav/src/assets/styles/components/app.scss
@@ -1,6 +1,6 @@
 // import dark theme
 // @use 'element-plus/theme-chalk/src/dark/css-vars.scss' as *;
-@use '@/assets/styles/theme/element.scss' as *;
+// @use '@/assets/styles/theme/element.scss' as *;
 
 body {
 	margin: 0;
