--- a/sub-apps/vitest-vue3-ts-el-app/src/assets/styles/components/app.scss
+++ b/sub-apps/vitest-vue3-ts-el-app/src/assets/styles/components/app.scss
@@ -8,6 +8,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	scroll-behavior: smooth; // 滚动条平滑移动
+	background: #f5f5f5;
 }
 
 code {
