--- a/sub-apps/vite-react-ts-jest-app/src/views/aichat/styles/index.scss
+++ b/sub-apps/vite-react-ts-jest-app/src/views/aichat/styles/index.scss
@@ -3,14 +3,16 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 100%;
   height: 100%;
-  min-width: 900px;
+  min-width: 600px;
   min-height: 100%;
+  padding: 20px;
   background-color: #fff;
 
   .chat-list {
     position: relative;
-    padding: 20px;
+    padding: 10px;
     overflow-y: auto;
     background-color: #fff;
     height: calc(100% - 180px);
@@ -23,6 +25,8 @@
     // }
 
     .chat-li {
+      width: 100%;
+      padding: 10px 0;
       p {
         margin: 0;
         padding: 6px;
