--- a/sub-apps/vitest-vue3-ts-el-app/src/views/aichat/styles/index.scss
+++ b/sub-apps/vitest-vue3-ts-el-app/src/views/aichat/styles/index.scss
@@ -1,21 +1,21 @@
 .chat-container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  // position: relative;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: space-between;
   width: 100%;
-  height: 100%;
-  min-width: 600px;
-  min-height: 100%;
+  min-width: 660px;
+  overflow: hidden;
+  // min-height: 100%;
   padding: 20px;
   background-color: #fff;
 
   .chat-lists {
-    position: relative;
+    // position: relative;
+    min-height: 550px;
+    overflow: hidden;
     padding: 10px;
-    overflow-y: auto;
     background-color: #fff;
-    height: calc(100% - 180px);
 
     // .chat-loading {
     //   position: absolute;
@@ -26,21 +26,25 @@
 
     .chat-li {
       width: 100%;
+      min-height: 100px;
       overflow: hidden;
       padding: 10px 0;
 
       &.user {
         display: flex;
+        // flex-direction: row;
         flex-direction: column;
         align-items: flex-end;
+        // text-align: right;
       }
 
       &.chatbot {
         display: flex;
         flex-direction: column;
+        // flex-direction: row;
         align-items: flex-start;
       }
-
+      
       // p {
       //   margin: 0;
       //   padding: 6px;
@@ -50,27 +54,29 @@
     }
   }
 
-  .chat-input-operator {
+  .chat-inputer {
     display: flex;
-    height: 180px;
+    flex-direction: column;
+    justify-content: flex-end;
+    overflow: hidden;
     background: #fff;
     border-top: 1px solid rgb(227, 229, 230);
-    flex-direction: column;
+    margin-top: 10px;
+    padding: 20px 10px 10px;
 
-    textarea {
-      border: none;
-      outline: none;
-      flex: 1;
+    .chat-textarea {
+      // border: none;
+      // outline: none;
+      // flex: 1;
+      width: 60%;
 
       &:focus {
         box-shadow: none;
       }
     }
 
-    .chat-send {
-      display: flex;
-      justify-content: flex-end;
-      margin: 8px 16px;
+    .chat-send { 
+      margin: auto 15px;
     }
   }
 }
